# PR00T

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
notebooks/: grounding_dino.ipynb  llava_demo.ipynb  vision_demo.ipynb
pr00t/: README.md  __init__.py  core.py  grounding.py  llava_interface.py  llava_parser.py  vision.py
tests/: blip.py  test_core.py
